--- a/app/views/directives/input-price-type.html
+++ b/app/views/directives/input-price-type.html
@@ -83,10 +83,19 @@
 					<div class="input-group" ng-class="{ 'has-error' : !currency.price && displayError && $parent.shouldValidatePrice() , 'has-success' : currency.price && $parent.shouldValidatePrice() }">
 
 						<div class="input-group-addon">
-              {{ currency.code }} *
+                        	{{ currency.code }} *
 						</div>
 
-						<input name="Currencies List - {{ currency.code }}" ng-model="currency.price" ng-required="$parent.shouldValidatePrice()" ng-disabled="($parent.isAddPriceDisabled() || !$parent.isItemPriceNewOrIsExitingAndValidForEdit(itemPrice)) && !$parent.cloningItem" type="text" class="form-control" maxlength="8" placeholder="1.00"/>
+						<input 
+							name="Currencies List - {{ currency.code }}" 
+							ng-model="currency.price" 
+							ng-required="$parent.shouldValidatePrice()" 
+							ng-disabled="($parent.isAddPriceDisabled() || !$parent.isItemPriceNewOrIsExitingAndValidForEdit(itemPrice)) && !$parent.cloningItem" 
+							type="text" 
+							class="form-control" 
+							maxlength="8" 
+							placeholder="1.00"
+							ng-pattern="regexp.numberAndDecimal"/>
 
 					</div>
 
