--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -440,8 +440,8 @@
 
               <div class="row">
                 <div class="form-group">
-                  <div class="col-xs-7">
-                    <input ng-disabled="isDisabled()" ng-model="formData.weight" type="text" class="form-control" placeholder="10.00">
+                  <div class="col-xs-7" ng-class="{ 'has-error' : formData.weight && displayError, 'has-success' : !displayError || formData.weight}">
+                    <input ng-disabled="isDisabled()" ng-model="formData.weight" type="text" class="form-control" placeholder="10.00" name="Item Weigh" ng-pattern="regexp.numberAndDecimal">
                   </div>
 
                   <div class="col-xs-5">
@@ -460,8 +460,8 @@
 
               <div class="row">
                 <div class="form-group">
-                  <div class="col-xs-7">
-                    <input ng-model="formData.volume" type="text" class="form-control" placeholder="10.00" ng-disabled="isDisabled()">
+                  <div class="col-xs-7" ng-class="{ 'has-error' : formData.volume && displayError, 'has-success' : !displayError || formData.volume}">
+                    <input ng-model="formData.volume" type="text" class="form-control" placeholder="10.00" ng-disabled="isDisabled()" name="Item Volume" ng-pattern="regexp.numberAndDecimal">
                   </div>
 
                   <div class="col-xs-5">
@@ -482,24 +482,23 @@
 
           <div class="row" ng-disabled="isDisabled()">
 
-            <div class="form-group"
-                 ng-class="{ 'has-error' : isMeasurementRequired() && !isMeasurementValid() , 'has-success' : isMeasurementValid() }">
-              <div class="col-md-3 col-xs-3">
-                <input ng-model="formData.length" ng-required="isMeasurementRequired()" type="text" class="form-control"
+            <div class="form-group">
+              <div class="col-md-3 col-xs-3" ng-class="{ 'has-error' : isMeasurementRequired() && !formData.length && displayError, 'has-success' : formData.length}">
+                <input ng-model="formData.length" ng-required="isMeasurementRequired()" type="text" class="form-control" ng-pattern="regexp.numberAndDecimal"
                        placeholder="Length" name="Length" ng-disabled="isDisabled()">
               </div>
 
-              <div class="col-md-3 col-xs-3">
-                <input ng-model="formData.width" ng-required="isMeasurementRequired()" type="text" class="form-control"
+              <div class="col-md-3 col-xs-3" ng-class="{ 'has-error' : isMeasurementRequired() && !formData.width && displayError, 'has-success' : formData.width }">
+                <input ng-model="formData.width" ng-required="isMeasurementRequired()" type="text" class="form-control"  ng-pattern="regexp.numberAndDecimal"
                        placeholder="Width" name="Width" ng-disabled="isDisabled()">
               </div>
 
-              <div class="col-md-3 col-xs-3">
-                <input ng-model="formData.height" ng-required="isMeasurementRequired()" type="text" class="form-control"
+              <div class="col-md-3 col-xs-3" ng-class="{ 'has-error' : isMeasurementRequired() && !formData.height && displayError, 'has-success' : formData.height }">
+                <input ng-model="formData.height" ng-required="isMeasurementRequired()" type="text" class="form-control"  ng-pattern="regexp.numberAndDecimal"
                        placeholder="Height" name="Height" ng-disabled="isDisabled()">
               </div>
 
-              <div class="col-md-3 col-xs-3">
+              <div class="col-md-3 col-xs-3" ng-class="{ 'has-error' : isMeasurementRequired() && !formData.dimensionType && displayError, 'has-success' : formData.dimensionType }">
                 <select ng-model="formData.dimensionType" class="form-control" ng-required="isMeasurementRequired()"
                         name="Unit of Measurement" ng-disabled="isDisabled()">
                   <option ng-selected="formData.dimensionType === dimension.id" ng-repeat="dimension in dimensionUnits"
@@ -538,7 +537,7 @@
             </div>
 
           <div class="voucher-container" ng-if="isVoucherSelected">
-            <div class="form-group">
+            <div class="form-group" ng-class="{ 'has-error' : !formData.voucher && displayError , 'has-success' : formData.voucher }">
               <label>Voucher *</label>
               <ui-select ng-if="uiSelectTemplateReady" required ng-model="formData.voucher" theme="bootstrap" name="Voucher" ng-disabled="isDisabled()">
                 <ui-select-match placeholder="Select Voucher" ui-lock-choice="isDisabled()" >{{ $select.selected.name}}
