--- a/app/views/directives/input-station-exception.html
+++ b/app/views/directives/input-station-exception.html
@@ -20,29 +20,29 @@
 
         <div class="row">
 
-          <div class="col-xs-12 col-sm-6">
+          <div class="col-xs-12 col-sm-6" ng-class="{ 'has-error' : !stationException.startDate && displayError, 'has-success' : stationException.startDate }">
             <date-picker-field ng-if="minDate" min-date="$parent.minDate"
               disable="viewOnly || itemIsActive" form="form" label="Effective From"
-              name="StationExceptionEffectiveFrom" ng-model="stationException.startDate" required="true">
+              name="Station Exception {{ $parent.key+1 }} Effective From" ng-model="stationException.startDate" required="true">
             </date-picker-field>
           </div>
 
-          <div class="col-xs-12 col-sm-6">
+          <div class="col-xs-12 col-sm-6" ng-class="{ 'has-error' : !stationException.endDate && displayError , 'has-success' : stationException.endDate }">
             <date-picker-field ng-if="minDate" min-date="$parent.minDate"
               disable="viewOnly || itemIsInactive" form="form" label="Effective To"
               end-current-effective="$parent.isAddPriceDisabled() || $parent.editingItem"
-              name="StationExceptionPriceEffectiveTo" ng-model="stationException.endDate"
+              name="Station Exception {{ $parent.key+1 }} EffectiveTo" ng-model="stationException.endDate"
               required="true">
             </date-picker-field>
           </div>
 
         </div>
 
-				<div class="row" ng-show="stationException.startDate && stationException.endDate && stationException.stations.length > 0">
+				<div class="row" ng-if="stationException.startDate && stationException.endDate && stationException.stations.length > 0">
 
 					<div class="col-xs-12 col-sm-6">
 
-						<div class="form-group" ng-disabled="$parent.$parent.isAddPriceDisabled()" ng-class="{ 'has-error' : !stationException.stationId , 'has-success' : stationException.stationId }">
+						<div class="form-group" ng-disabled="$parent.$parent.isAddPriceDisabled()" ng-class="{ 'has-error' : !stationException.stationId && displayError, 'has-success' : stationException.stationId }">
 
 							<label>Station *</label>
 
@@ -57,7 +57,7 @@
 
 					<div class="col-xs-12 col-sm-6">
 
-						<div class="form-group" ng-disabled="$parent.$parent.isAddPriceDisabled()" ng-class="{ 'has-error' : !stationException.taxIs , 'has-success' : stationException.taxIs }">
+						<div class="form-group" ng-disabled="$parent.$parent.isAddPriceDisabled()" ng-class="{ 'has-error' : !stationException.taxIs && displayError, 'has-success' : stationException.taxIs }">
 
 							<label>Tax Is *</label>
 
@@ -81,13 +81,20 @@
 
 				<div class="form-group" ng-repeat="(exceptionCurrencyKey,exceptionCurrency) in stationException.stationExceptionCurrencies track by $index">
 
-					<div class="input-group">
+					<div class="input-group" ng-class="{ 'has-error' : !exceptionCurrency.price && displayError, 'has-success' : exceptionCurrency.price }">
 
 						<div class="input-group-addon">
 							{{ masterCurrenciesList[exceptionCurrency.companyCurrencyId] }} *
 						</div>
 
-						<input ng-model="exceptionCurrency.price" ng-disabled="viewOnly || itemIsActive" type="text" class="form-control"/>
+						<input 
+							ng-model="exceptionCurrency.price"
+							required
+							name="Currencies List - {{ masterCurrenciesList[exceptionCurrency.companyCurrencyId] }}"
+							ng-disabled="viewOnly || itemIsActive"
+							type="text"
+							class="form-control"
+							ng-pattern="regexp.numberAndDecimal"/>
 
 					</div>
 
