--- a/app/styles/_inputs.scss
+++ b/app/styles/_inputs.scss
@@ -3,13 +3,18 @@
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 }
 
+.has-success .select2-container ul {
+  border-color: #3c763d;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+}
+
 input.has-error, .has-error .btn-default {
   border-color: #a94442;
   color: #a94442;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 }
 
-.has-success .select2-container ul {
+input.has-success, .has-success .btn-default {
   border-color: #3c763d;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 }
