--- a/app/views/tax-rates.html
+++ b/app/views/tax-rates.html
@@ -145,8 +145,8 @@
       <tr tabindex="0" class="animate-switch-container" ng-repeat="taxRate in companyTaxRatesList | orderBy: 'created' track by $index" ng-switch on="taxRate.action" ng-class="taxRateRowClass(taxRate)">
         <!-- Switch for taxTypeCode -->
         <td class="animate-switch col-xs-2" ng-switch-when="read">{{ taxRate.taxTypeCode.taxTypeCode }}</td>
-        <td class="animate-switch tax-rates-ui-select col-xs-2" ng-switch-when="edit">
-          <ui-select ng-model="taxRate.taxTypeCode" theme="bootstrap" name="taxTypeCode" ng-disabled="isDisabled(taxRate)">
+        <td class="animate-switch tax-rates-ui-select col-xs-2" ng-switch-when="edit" ng-class="{ 'has-error' : !taxRate.taxTypeCode && displayError, 'has-success' : taxRate.taxTypeCode }">
+          <ui-select ng-model="taxRate.taxTypeCode" theme="bootstrap" name="taxTypeCode" ng-disabled="isDisabled(taxRate)" required>
             <ui-select-match placeholder="Tax Type">
               {{ $select.selected.taxTypeCode }}
             </ui-select-match>
@@ -155,7 +155,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
-        <td class="animate-switch tax-rates-ui-select col-xs-2" ng-switch-when="create">
+        <td class="animate-switch tax-rates-ui-select col-xs-2" ng-switch-when="create" ng-class="{ 'has-error' : !taxRate.taxTypeCode && displayError, 'has-success' : taxRate.taxTypeCode }">
           <ui-select ng-model="taxRate.taxTypeCode" theme="bootstrap" name="taxTypeCode">
             <ui-select-match placeholder="Tax Type">
               {{ $select.selected.taxTypeCode }}
@@ -167,7 +167,7 @@
         </td>
         <!-- Switch for countryName -->
         <td class="animate-switch col-xs-1" ng-switch-when="read">{{ taxRate.countryName.countryName }}</td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="edit">
+        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="edit" ng-class="{ 'has-error' : !taxRate.countryName && displayError, 'has-success' : taxRate.countryName }">
           <ui-select ng-model="taxRate.countryName" theme="bootstrap" name="taxRateCountry" ng-disabled="isTaxRateCountryFieldDisabled(taxRate)" ng-change="filterTaxRateStations(taxRate)">
             <ui-select-match placeholder="Country">
               {{ $select.selected.countryName }}
@@ -177,7 +177,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="create">
+        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="create" ng-class="{ 'has-error' : !taxRate.countryName && displayError, 'has-success' : taxRate.countryName }">
           <ui-select ng-model="taxRate.countryName" theme="bootstrap" name="taxRateCountry" ng-disabled="isTaxRateCountryFieldDisabledForCreate(taxRate)" ng-change="filterTaxRateStations(taxRate)">
             <ui-select-match placeholder="Country">
               {{ $select.selected.countryName }}
@@ -193,7 +193,7 @@
             {{ station.stationCode }}
           </p>
         </td>
-        <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="edit">
+        <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="edit" ng-class="{ 'has-error' : !taxRate.companyTaxRateStations && displayError, 'has-success' : taxRate.companyTaxRateStations }">
           <ui-select ng-if="taxRateSelectReady(taxRate)"  on-select="onUiSelect($select)"  multiple ng-model="taxRate.companyTaxRateStations" theme="bootstrap" sortable="true" close-on-select="true" ng-disabled="isTaxRateStationsDisabled(taxRate)" style="margin-bottom:10px; min-height:35px;">
             <ui-select-match placeholder="Stations">{{ $item.stationCode }}</ui-select-match>
             <ui-select-choices group-by="'countryName'" repeat="station in taxRate.availableStations | filter: $select.search | orderBy:'stationCode'" position={{taxRate.position}}>
@@ -201,7 +201,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
-        <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="create">
+        <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="create" ng-class="{ 'has-error' : !taxRate.companyTaxRateStations && displayError, 'has-success' : taxRate.companyTaxRateStations }">
           <ui-select ng-if="viewIsReady"  on-select="onUiSelect($select)"  multiple ng-model="taxRate.companyTaxRateStations" theme="bootstrap" sortable="true" close-on-select="false" ng-disabled="isTaxRateStationsDisabledForCreate(taxRate)" style="margin-bottom:10px; min-height:35px;">
             <ui-select-match placeholder="Stations">{{ $item.stationCode }}</ui-select-match>
             <ui-select-choices group-by="'countryName'" repeat="station in taxRate.availableStations | filter: $select.search | orderBy:'stationCode'" position='auto'>
@@ -211,7 +211,7 @@
         </td>
         <!-- Switch for taxRateType -->
         <td class="animate-switch col-xs-1" ng-switch-when="read">{{ taxRate.taxRateType.taxRateType }}</td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="edit">
+        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="edit" ng-class="{ 'has-error' : !taxRate.taxRateType && displayError, 'has-success' : taxRate.taxRateType }">
           <ui-select ng-model="taxRate.taxRateType" theme="bootstrap" name="taxRateType" ng-disabled="isDisabled(taxRate)" ng-change="shouldTaxRateCurrencyBeClear(taxRate)">
             <ui-select-match placeholder="Rate Type">
               {{ $select.selected.taxRateType }}
@@ -221,7 +221,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="create">
+        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="create" ng-class="{ 'has-error' : !taxRate.taxRateType && displayError, 'has-success' : taxRate.taxRateType }">
           <ui-select ng-model="taxRate.taxRateType" theme="bootstrap" name="taxRateType" ng-change="shouldTaxRateCurrencyBeClear(taxRate)">
             <ui-select-match placeholder="Rate Type">
               {{ $select.selected.taxRateType }}
@@ -235,7 +235,7 @@
         <td class="animate-switch col-xs-1" ng-switch-when="read">
            {{ taxRate.currency.code }}
         </td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="edit">
+        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="edit" ng-class="{ 'has-error' : !taxRate.currency && displayError, 'has-success' : taxRate.currency }">
           <ui-select ng-model="taxRate.currency" theme="bootstrap" name="currencyCode" ng-disabled="isTaxRateCurrencyCodeDisabled(taxRate)">
             <ui-select-match placeholder="Currency">
               {{ $select.selected.code }}
@@ -245,7 +245,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="create">
+        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="create" ng-class="{ 'has-error' : !taxRate.currency && displayError, 'has-success' : taxRate.currency }">
           <ui-select ng-model="taxRate.currency" theme="bootstrap" name="currencyCode" ng-disabled="isTaxRateTypePercentage(taxRate)">
             <ui-select-match placeholder="Currency">
               {{ $select.selected.code }}
@@ -257,23 +257,23 @@
         </td>
         <!-- Switch for taxRateValue -->
         <td class="animate-switch col-xs-1" ng-switch-when="read">{{ taxRate.taxRateValue }}<span ng-show="isTaxRateTypePercentage(taxRate)"> %</span></td>
-        <td class="animate-switch tax-rates-input col-xs-1" ng-switch-when="edit">
+        <td class="animate-switch tax-rates-input col-xs-1" ng-switch-when="edit" ng-class="{ 'has-error' : !taxRate.taxRateValue && displayError, 'has-success' : taxRate.taxRateValue }">
           <input ng-model="taxRate.taxRateValue" type="text" name="taxRateValue" class="form-control" placeholder="Tax Rate" ng-disabled="isDisabled(taxRate)">
         </td>
-        <td class="animate-switch tax-rates-input col-xs-1" ng-switch-when="create">
+        <td class="animate-switch tax-rates-input col-xs-1" ng-switch-when="create" ng-class="{ 'has-error' : !taxRate.taxRateValue && displayError, 'has-success' : taxRate.taxRateValue }">
           <input ng-model="taxRate.taxRateValue" type="text" name="taxRateValue" class="form-control" placeholder="Tax Rate">
         </td>
         <!-- Switch for startDate -->
         <td class="animate-switch col-xs-1" ng-switch-when="read">{{ taxRate.startDate }}</td>
-        <td class="animate-switch tax-rates-dates col-xs-1" ng-switch-when="edit">
+        <td class="animate-switch tax-rates-dates col-xs-1" ng-switch-when="edit" ng-class="{ 'has-error' : !taxRate.startDate && displayError, 'has-success' : taxRate.startDate }">
           <date-picker-field disable-past="true" ng-model="taxRate.startDate" disable="isDisabled(taxRate)" min-date="determineMinDate(taxRate.startDate)" orientation="determineDatePickerOrientation(taxRate)"></date-picker-field>
         </td>
-        <td class="animate-switch tax-rates-dates col-xs-1" ng-switch-when="create">
+        <td class="animate-switch tax-rates-dates col-xs-1" ng-switch-when="create" ng-class="{ 'has-error' : !taxRate.startDate && displayError, 'has-success' : taxRate.startDate }">
           <date-picker-field disable-past="true" ng-model="taxRate.startDate" min-date="determineMinDate()"></date-picker-field>
         </td>
         <!-- Switch for endDate -->
         <td class="animate-switch col-xs-1" style="position:relative !important" ng-switch-when="read">{{ taxRate.endDate }}</td>
-        <td class="animate-switch tax-rates-dates col-xs-1" style="position:relative !important" ng-switch-when="edit" >
+        <td class="animate-switch tax-rates-dates col-xs-1" style="position:relative !important" ng-switch-when="edit" ng-class="{ 'has-error' : !taxRate.endDate && displayError, 'has-success' : taxRate.endDate }">
           <date-picker-field
            min-date="minDate"
            custom-effective="true"
@@ -282,7 +282,7 @@
            ng-model="taxRate.endDate"
            orientation="determineDatePickerOrientation(taxRate)" ></date-picker-field>
         </td>
-        <td class="animate-switch tax-rates-dates col-xs-1" style="position:relative !important" ng-switch-when="create">
+        <td class="animate-switch tax-rates-dates col-xs-1" style="position:relative !important" ng-switch-when="create" ng-class="{ 'has-error' : !taxRate.endDate && displayError, 'has-success' : taxRate.endDate }">
           <date-picker-field
            min-date="minDate"
            custom-effective="true"
